--- a/app/views/collaborators/index.html.erb
+++ b/app/views/collaborators/index.html.erb
@@ -103,9 +103,9 @@
                         </td>
                         <td class="text-right">
                             <div class="btn-group">
-                                <%= link_to "/collaborators/#{user.id}", :controller => "collaborators", :action => "show", :method => "get" do %>
+                                <!-- <%= link_to "/collaborators/#{user.id}", :controller => "collaborators", :action => "show", :method => "get" do %>
                                     <button class="btn-white btn btn-xs" style="border-radius: 0px;">Ver</button>
-                                <% end %>
+                                <% end %> -->
                                 <%= link_to "/collaborators/#{user.id}/edit", :controller => "collaborators", :action => "edit", :method => "get" do %>
                                     <button class="btn-warning btn btn-xs" style="border-radius: 0px;">Editar</button>
                                 <% end %>
