--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -3,7 +3,7 @@
         <ul class="nav metismenu" id="side-menu">
             <li class="nav-header">
                 <div class="dropdown profile-element">
-                    <img alt="image" class="rounded-circle" src="<%= image_path('profile_small.jpg') %>"/>
+                    <!-- <img alt="image" class="rounded-circle" src="<%= image_path('profile_small.jpg') %>"/> -->
                     <a data-toggle="dropdown" class="dropdown-toggle" href="" style="cursor: default;">
                         <span class="block m-t-xs font-bold"><%= @user.user.name %> <%= @user.user.last_name %></span>
                         <span class="text-muted text-xs block">Administrador</span>
@@ -50,7 +50,7 @@
                     <li class="<%= is_active_controller('abilities') %>"><a href="<%= url_for :controller => 'abilities', :action => 'index' %>"><i class="fa fa-list"></i>Todo</a></li>
                     <li class="<%= is_active_controller('abilities_blandas') %> <%= is_active_controller('categories') %> <%= is_active_controller('areas') %>">
                         <a href="/abilities/blandas"><i class="fa fa-smile-o"></i>Blandas<span class="fa arrow"></span></a>
-                        <ul class="nav nav-third-level collapse <%= is_active_controller('abilities_blandas', 'in') %>">
+                        <ul class="nav nav-third-level collapse <%= is_active_controller('abilities_blandas', 'in') %> <%= is_active_controller('abilities_blandas', 'in') %> <%= is_active_controller('categories', 'in') %> <%= is_active_controller('areas', 'in') %>">
                             <li class="<%= is_active_controller_action('abilities_blandas', 'index') %>" >
                                 <a href="/abilities/blandas">Competencias</a>
                             </li>
