--- a/app/views/periods/edit.html.erb
+++ b/app/views/periods/edit.html.erb
@@ -69,6 +69,7 @@
 
         $("#wizard").steps({
             enableAllSteps: true,
+            // enableFinishButton: false,
             labels: {
                 cancel: "Cancela",
                 current: "Página actual:",
@@ -157,7 +158,7 @@
         collaborators_select.on("change", function(e) {
             let ids = $(this).val()
             if(ids.length >= indexes_collaborators.length) {
-                while(ids.length !== indexes_collaborators.length) {
+                for(let diff = 0; diff < Math.abs(ids.length - indexes_collaborators.length); ++diff) {
                     let current_collaborator = null
                     inner_loop:
                     for (let i = 0; i < ids.length; ++i) {
@@ -174,26 +175,31 @@
                         text: `${current_collaborator.name} ${current_collaborator.last_name} - ${current_collaborator.rut}`
                     }))
                 }
+                console.log(indexes_collaborators)
             }
             else {
-                while(ids.length !== indexes_collaborators.length) {
+                for(let diff = 0; diff < Math.abs(indexes_collaborators.length - ids.length); ++diff) {
                     let index = null
+                    console.log(ids)
                     inner_loop:
                     for (let i = 0; i < indexes_collaborators.length; ++i) {
                         if (!ids.includes(gon.collaborators[i].id.toString())) {
-                            index = indexes_collaborators[i]
+                            index = i
                             break inner_loop
                         }
                     }
+                    console.log(`iteración: ${diff+1} -- index: ${index}`)
                     indexes_collaborators = indexes_collaborators.filter((e) => e !== index)
+                    $("#wizard").steps("remove",  index + 2)
                 }
+                console.log(indexes_collaborators)
             }
         })
 
         evaulators_select.on("change", function(e) {
             let ids = $(this).val()
             if(ids.length >= indexes_evaluators.length) {
-                while(ids.length !== indexes_evaluators.length) {
+                for(let diff = 0; diff < Math.abs(ids.length - indexes_evaluators.length); ++diff) {
                     let current_collaborator = null
                     inner_loop:
                     for (let i = 0; i < ids.length; ++i) {
@@ -201,7 +207,6 @@
                             if(gon.collaborators[j].id == ids[i] && !indexes_evaluators.includes(j)) {
                                 indexes_evaluators.push(j)
                                 current_collaborator = gon.collaborators[j]
-                                evaluators.push(current_collaborator.id)
                                 break inner_loop
                             }
                         }
@@ -240,23 +245,24 @@
                     current_collaborators_select_container.find('.move i').removeClass().addClass('fa fa-arrow-right');
                     current_collaborators_select_container.find('.remove i').removeClass().addClass('fa fa-arrow-left');
                 }
+                console.log(indexes_evaluators)
             }
             else {
-                while(ids.length !== indexes_evaluators.length) {
+                for(let diff = 0; diff < Math.abs(indexes_evaluators.length - ids.length); ++diff) {
                     let index = null
-                    let step_index = 0
+                    console.log(ids)
                     inner_loop:
                     for (let i = 0; i < indexes_evaluators.length; ++i) {
                         if (!ids.includes(gon.collaborators[i].id.toString())) {
-                            index = indexes_evaluators[i]
-                            step_index = evaluators.indexOf(gon.collaborators[index].id)
+                            index = i
                             break inner_loop
                         }
                     }
+                    console.log(`iteración: ${diff+1} -- index: ${index}`)
                     indexes_evaluators = indexes_evaluators.filter((e) => e !== index)
-                    evaluators = evaluators.filter((e) => e !== evaluators[step_index])
-                    $("#wizard").steps("remove",  step_index + 2)
+                    $("#wizard").steps("remove",  index + 2)
                 }
+                console.log(indexes_evaluators)
             }
         })
     })
